--- a/estoque.css
+++ b/estoque.css
@@ -17,6 +17,9 @@ header {
     border: 0.5vh solid #000;
     position: fixed;
     z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 .ld {
     background-image: url(bgh.avif);
@@ -38,15 +41,17 @@ header {
     background-size: cover;
     background-position: center;
     color: white;
-    height: 100%;
+    height: 86vh;
     text-align: center;
     width: 82vw;
     border: 0.3vh solid #000;
     position: fixed;
     right: 0;
-    bottom: -14vh;
+    bottom: 0;
     box-shadow: inset 0.6vh 0.6vh 0.6vh 0.6vh #000;
     overflow-y: scroll;
+    overflow-x: hidden;
+    transition-duration: 0.3s;
 }
 .prod::-webkit-scrollbar {
     width: 1vw;
@@ -67,7 +72,7 @@ header {
 .prod::-webkit-scrollbar-thumb:active {
     background-color: #ac9752;
 }
-.xchair {
+.prod1 {
     border: 0.3vh solid #ffe23f65;
     background: linear-gradient(0deg, rgba(23,23,23,1) 26%, rgba(0,0,0,1) 100%);
     width: 25vw;
@@ -78,18 +83,25 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    transition-duration: 0.3s;
     border-radius: 3vh;
+    overflow: hidden;
+    transition: ease-in;
+    transition-duration: 0.3s;
 }
-.xchair img {
+.prod1 img {
     height: 60%;
     margin: 2vh;
+    transition-duration: 0.3s;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
-.xchair h1 {
-    font-size: 3vh;
+.prodtxt {
+    font-size: 1.5vh;
     width: 99%;
+    text-wrap: stable;
 }
-.xchair:hover {
+.prod1:hover {
     border: 0.3vh solid #ffe23f;
 }
   
@@ -111,7 +123,6 @@ header {
   }
   
   header .search-container button {
-    height: 5vh;
     float: right;
     background: #ddd;
     border: none;
@@ -119,9 +130,15 @@ header {
     border: 0.3vh solid #d80000;
     border-top-right-radius: 1vh;
     border-bottom-right-radius: 1vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   header .search-container img {
-    height: 100%;
+    height: 4.5vh;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
   }
 .ld h1 {
     font-size: 5vh;
@@ -145,13 +162,13 @@ header {
     width: 98%;
     margin-bottom: 3vh;
     color: #fff;
-    background-color: #0000005d;
+    background-color: #0000008a;
     cursor: pointer;
     border: none;
     transition-duration: 0.3s;
     border-bottom: 0.3vh solid #fff;
 }
-#pr {
+.pr {
     font-size: 4vh;
     margin: 0;
     text-align: right;
@@ -159,7 +176,7 @@ header {
     color: #63ff8a;
     text-shadow: 0.5vh 0.5vh 0.5vh #000;
 }
-#ap {
+.ap {
     font-size: 2vh;
     margin: 1vh;
     color: #1fa541;
@@ -170,13 +187,271 @@ header {
 }
 .moveis {
     display: grid;
+    grid-template-columns: auto auto auto;
 }
 .config {
     position: absolute;
-    right: 3vh;
-    top: 3vh;
+    right: 1.5vw;
     cursor: pointer;
 }
 .config img {
     height: 8vh;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+}
+.new {
+    height: 20vh;
+    width: 20vw;
+    background-image: url(new.png);
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    margin-left: 19vw;
+    margin-bottom: 37vh;
+    display: flex;
+    align-items: center;
+    pointer-events: none;
+}
+.new h1 {
+    text-shadow: 0.5vh 0.5vh 0.5vh #000;
+    animation-name: pulse;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    width: 99%;
+    font-size: 3vh;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0.6;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.6;
+    }
+}
+
+#mv {
+    animation-name: pulsetr;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.3s;
+}
+#apr {
+    animation-name: pulsetr;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.6s;
+}
+#ele {
+    animation-name: pulsetr;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.9s;
+}
+#ex {
+    animation-name: pulsetr;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1.2s;
+}
+#dv {
+    animation-name: pulsetr;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1.5s;
+}
+#nov {
+    animation-name: pulsetr;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1.8s;
+}
+#fm {
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.com {
+    background-image: url(bgh.avif);
+    background-size: cover;
+    color: white;
+    height: 87vh;
+    text-align: center;
+    width: 28vw;
+    border: 0.5vh solid #000;
+    position: fixed;
+    bottom: 0;
+    right: -30vw;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    transition-duration: 0.3s;
+}
+
+.txtp {
+    padding: 3vh;
+    font-size: 4vh;
+    border-bottom: 0.3vh solid #fff;
+    margin: 0;
+    margin-bottom: 3vh;
+}
+
+.prc {
+    font-size: 5vh;
+    margin: 0;
+    text-align: right;
+    width: 90%;
+    color: #63ff8a;
+    text-shadow: 0.5vh 0.5vh 0.5vh #000;
+}
+
+.com button {
+    height: 8vh;
+    width: 98%;
+    background-color: #63ff8a;
+    font-size: 5vh;
+    color: #000;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    border: 0.3vh solid #000;
+    transition-duration: 0.3s;
+    border-radius: 1vh;
+    cursor: pointer;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+}
+.com button:hover {
+    border-color: #d6d857;
+    color: #af7800;
+}
+
+.par {
+    font-size: 2vh;
+    margin: 1vh;
+    text-align: right;
+    width: 90%;
+    color: #81d395;
+    text-shadow: 0.5vh 0.5vh 0.5vh #000;
+}
+#prej {
+    font-size: 2.5vh;
+    color: #7dff9d;
+    margin: 0.5vh;
+}
+
+.newdes {
+    font-size: 2vh;
+    margin: 1vh;
+    text-align: center;
+    width: 100%;
+    color: #ffffff;
+    background: linear-gradient(48deg, rgba(255,66,66,1) 0%, rgba(180,25,25,1) 50%, rgba(96,0,0,1) 100%);
+    text-shadow: 0.5vh 0.5vh 0.5vh #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6vh;
+    letter-spacing: 0.1vw;
+    border: 0.3vh solid #000;
+    border-radius: 1vh;
+}
+
+.newdes h1 {
+    animation-name: pulse;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+#vol {
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 8vw;
+    border: 0.3vh solid #5e0f0f;
+    position: absolute;
+    left: -8vw;
+    cursor: pointer;
+    transition-duration: 0.3s;
+    background-color: #00000079;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+}
+#vol img {
+    height: 100%;
+}
+#vol:hover {
+    background-color: #000000be;
+}
+#est {
+    font-size: 3vh;
+    margin: 1vh;
+    text-align: right;
+    width: 90%;
+    color: #c4bd59;
+    text-shadow: 0.5vh 0.5vh 0.5vh #000;
+}
+
+#myUL {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    width: 35vw;
+    height: 36vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    position: absolute;
+    bottom: -32vh;
+    margin-right: 3vw;
+  }
+  
+  #myUL li a {
+    border: 1px solid #ddd;
+    margin-top: -1px;
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
+    text-align: left;
+  }
+  #myUL li {
+    width: 100%;
+  }
+  
+  #myUL li a:hover:not(.header) {
+    background-color: #eee;
+  }
+
+@keyframes pulsetr {
+    0% {
+        background-color: #0000008a;
+    }
+    50% {
+        background-color: #4e331c2a;
+    }
+    100% {
+        background-color: #0000008a;
+    }
 }
