--- a/estoque.css
+++ b/estoque.css
@@ -20,6 +20,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    box-shadow: inset 15vw 0vw 1vw #00000042;
+    overflow: hidden;
 }
 .ld {
     background-image: url(bgh.avif);
@@ -256,26 +258,19 @@ header {
     animation-timing-function: ease-in-out;
     animation-delay: 0.9s;
 }
-#ex {
+#dv {
     animation-name: pulsetr;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     animation-delay: 1.2s;
 }
-#dv {
-    animation-name: pulsetr;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    animation-delay: 1.5s;
-}
 #nov {
     animation-name: pulsetr;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
-    animation-delay: 1.8s;
+    animation-delay: 1.5s;
 }
 #fm {
     height: fit-content;
@@ -443,6 +438,26 @@ header {
   #myUL li a:hover:not(.header) {
     background-color: #eee;
   }
+.lg {
+    width: 10vw;
+    height: 120%;
+    background-image: url(logo.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 3vw;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+#pr1 {
+    width: 2vw;
+    height: 100%;
+}
+#pr1 img {
+    width: 2vw;
+    height: 100%;
+}
 
 @keyframes pulsetr {
     0% {
