--- a/login.css
+++ b/login.css
@@ -18,7 +18,7 @@ body{
     border: 2px solid rgba(30, 143, 255, 0.623);
 }
 
-.Btn1{
+.btn1{
     border-radius: 23px;
     color: #ffffff;
     background: transparent;
