--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ header {
     background-image: url(bgh.avif);
     background-size: cover;
     color: white;
-    height: 87vh;
+    height: 85vh;
     text-align: center;
     width: 18vw;
     border: 0.5vh solid #000;
     position: fixed;
-    bottom: -1.8vh;
+    top: 15vh;
     display: flex;
     justify-content: left;
     flex-direction: column;
@@ -53,7 +53,7 @@ header {
     border: 0.3vh solid #000;
     position: fixed;
     right: 0;
-    bottom: 0;
+    top: 15vh;
     box-shadow: inset 0.6vh 0.6vh 0.6vh 0.6vh #000;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -1198,21 +1198,29 @@ header {
     margin: 3vh;
     border-radius: 100%;
     border: 0.3vh solid #d80000;
-    transition-duration: 0.3s;
+    transition-duration: 0s;
 }
 .nmu {
     width: fit-content;
-    height: 100%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    background-color: #380000;
+    border-radius: 5vh;
+    padding-left: 3vh;
+    margin-right: 3vh;
+    transition-duration: 0.1s;
+    border: 0.3vh solid #410202ab;
+    z-index: 5;
 }
 
 .user img {
     height: 100%;
 }
 #usu {
+    font-size: 2.5vh;
     color: #e47373;
     letter-spacing: 0.1vw;
 }
@@ -1222,9 +1230,12 @@ header {
 .nmu:hover .user {
     background-color: #720606c7;
 }
-
+.nmu:hover {
+    background-color: #4e0303c7;
+    border-color: #ff0000b2;
+}
 .droplg {
-    width: 20vw;
+    width: 21vw;
     height: fit-content;
     background-color: #41020270;
     position: absolute;
@@ -1236,7 +1247,7 @@ header {
     justify-content: center;
     flex-direction: column;
     border: 0.3vh solid #5e0f0f;
-    z-index: -1;
+    z-index: 4;
     box-shadow: 0.5vh 0.5vh 0.5vh #000;
 }
 .droplg div {
@@ -1283,6 +1294,37 @@ header {
 #cpr img {
     height: 5vh;
 }
+.off {
+    width: 100%;
+    height: 3vh;
+    background-color: #000000;
+    position: absolute;
+    bottom: -3vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0.3vh solid #830101;
+    border-radius: 5vh;
+    box-shadow: 0.5vh 0.5vh 0.5vh #000;
+}
+.off h1 {
+    font-size: 2vh;
+    color: #ffa0a0;
+    letter-spacing: 0.1vw;
+    position: absolute;
+    left: 100%;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: ldaoff;
+    text-wrap: nowrap;
+    white-space: nowrap;
+}
+.off em {
+    font-size: 2vh;
+    color: #f54747;
+    letter-spacing: 0.1vw;
+}
 
 @keyframes pulsetr {
     0% {
@@ -1302,5 +1344,14 @@ header {
     }
     100% {
         left: -90%;
+    }
+}
+
+@keyframes ldaoff {
+    0% {
+        left: 100%;
+    }
+    100% {
+        left: -100%;
     }
 }
