--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header {
 .com::-webkit-scrollbar-thumb:active {
     background-color: #ac9752;
 }
-.prod1 {
+.pp {
     border: 0.3vh solid #ffe23f65;
     background: linear-gradient(0deg, rgba(23,23,23,1) 26%, rgba(0,0,0,1) 100%);
     width: 25vw;
@@ -114,7 +114,7 @@ header {
     transition-duration: 0.3s;
     box-shadow: 0.5vh 0.5vh 0.5vh #000;
 }
-.prod1 img {
+.pp img {
     height: 60%;
     margin: 2vh;
     transition-duration: 0.3s;
@@ -127,7 +127,7 @@ header {
     width: 99%;
     text-wrap: stable;
 }
-.prod1:hover {
+.pp:hover {
     border: 0.3vh solid #ffe23f;
 }
   
@@ -372,6 +372,7 @@ header {
 .com button {
     height: 8vh;
     width: 90%;
+    padding: 1vh;
     background: linear-gradient(48deg, rgba(174,208,145,1) 0%, rgba(104,215,16,1) 50%, rgba(166,218,188,1) 100%);
     background-size: 500% 100%;
     font-size: 5vh;
@@ -486,6 +487,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 3vh;
 }
 
 #fre {
@@ -657,15 +659,23 @@ header {
 }
 .av {
     width: 100%;
-    height: 27vh;
+    height: 30vh;
     background-color: #0000009a;
-    display: flex;
-    justify-content: center;
     transition-duration: 0.3s;
     margin-top: 3vh;
     margin-bottom: 3vh;
-    position: absolute;
-    bottom: -1vh;
+    border: 0.5vh solid #000;
+    border-radius: 3vh;
+}
+.apl {
+    display: flex;
+    width: 100%;
+    height: fit-content;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    bottom: 8vh;
 }
 #nota {
     font-size: 5vh;
@@ -675,13 +685,14 @@ header {
     text-wrap: nowrap;
 }
 .nt {
-    width: 100%;
+    width: 95%;
     height: fit-content;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
+    position: relative;
+    bottom: 8vh;
 }
-
 #nota em {
     font-size: 7vh;
     color: #ffffff;
@@ -689,8 +700,10 @@ header {
 }
 .avtxt {
     background-color: #552222ad;
-    width: 90%;
+    width: fit-content;
     height: 8vh;
+    padding-left: 1vh;
+    padding-right: 1vh;
     font-size: 2.5vh;
     border-radius: 15%;
     border: 0.3vh solid #000;
@@ -710,8 +723,6 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    margin-top: 10vh;
     background-color: #e6393973;
     border-radius: 15%;
     border: 0.3vh solid #000;
@@ -726,30 +737,23 @@ header {
     background-repeat: no-repeat;
 }
 .vd {
-    width: 90%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
     transition-duration: 0.3s;
-    position: absolute;
-    margin-top: 20vh;
     font-size: 4vh;
     color: #ffc793;
     text-shadow: 0.5vh 0.5vh 0.5vh #000;
 }
 .avv {
-    width: 90%;
-    display: flex;
-    justify-content: right;
-    align-items: center;
     transition-duration: 0.3s;
-    position: absolute;
-    margin-top: 21vh;
     font-size: 3vh;
     color: #6abd78;
     text-shadow: 0.5vh 0.5vh 0.5vh #000;
 }
-
+.vvv {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .comentarios {
     width: 100%;
     height: 50vh;
@@ -759,7 +763,9 @@ header {
     margin-top: 3vh;
     margin-bottom: 3vh;
     position: absolute;
-    bottom: -58vh;
+    bottom: -67vh;
+    border: 0.5vh solid #000;
+    border-radius: 3vh;
 }
 .cttxt {
     background-color: #552222ad;
@@ -1356,34 +1362,6 @@ header {
     color: #f54747;
     letter-spacing: 0.1vw;
 }
-.prod1a {
-    border: 0.3vh solid #ffe23f65;
-    background: linear-gradient(0deg, rgba(23,23,23,1) 26%, rgba(0,0,0,1) 100%);
-    width: 25vw;
-    height: 25vw;
-    cursor: pointer;
-    margin: 2vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 3vh;
-    overflow: hidden;
-    transition: ease-in;
-    transition-duration: 0.3s;
-    box-shadow: 0.5vh 0.5vh 0.5vh #000;
-}
-.prod1a img {
-    height: 60%;
-    margin: 2vh;
-    transition-duration: 0.3s;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-}
-.prod1a:hover {
-    border: 0.3vh solid #ffe23f;
-}
 .dsh {
     font-size: 2vh;
     margin: 0;
@@ -1393,6 +1371,14 @@ header {
     text-decoration: line-through;
     position: relative;
     top: 2vh;
+}
+.descdsh {
+    font-size: 3vh;
+    margin: 0;
+    color: #7e7e7e;
+    width: 90%;
+    text-align: right;
+    text-decoration: line-through;
 }
 .nm {
     margin: 0.5vh;
