--- a/style.css
+++ b/style.css
@@ -525,7 +525,6 @@ header {
     margin-right: 3vw;
     z-index: 7;
   }
-  
   #myUL li a {
     border: 0.1vh solid #ddd;
     background-color: #f6f6f6;
@@ -557,18 +556,13 @@ header {
     transition-duration: 0.3s;
     transform: rotate(-3deg);
 }
-#pr1 {
-    width: 1.5vw;
+.prs {
+    width: 2vw;
     height: 100%;
     margin-right: 0.5vw;
-    padding-right: 1vw;
-    padding-left: 1vw;
+    padding: 1vh;
     border-right: 0.3vh solid #000;
     background-color: #00000018;
-}
-#pr1 img {
-    width: 100%;
-    height: 100%;
 }
 .desc {
     display: none;
