--- a/style.css
+++ b/style.css
@@ -1381,6 +1381,14 @@ header {
 #pimg {
     margin: 0;
 }
+.vdi {
+    height: 80vh;
+    border: 0.3vh solid #000;
+}
+video {
+    width: 100%;
+    height: 100%;
+}
 
 @keyframes pulsetr {
     0% {
